--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -20,7 +20,7 @@
             <div class="text-center">
               <span class="d-block text-primary mt-4 mb-2">{{ msg | safe }}</span>
               <br />
-              <a href="{{ url_for('authentication_blueprint.login') }}" class="btn btn-primary shadow-2 mb-4">Sign IN</a>
+              <a href="{{ url_for('authentication_blueprint.login') }}" class="btn btn-primary shadow-2 mb-4">Se connecter</a>
             </div>              
             {% else %}
            
