--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -104,6 +104,15 @@
         </li>
         {% else %} -->
         <li class="pc-item">
+          <a  href="{{ url_for('home_blueprint.admin_custom') }}" class="pc-link">
+            <span class="pc-micon">
+              <i data-feather="user"></i>
+            </span>
+            <span class="pc-mtext">Admin</span>
+          </a>
+        </li>
+        
+        <li class="pc-item">
           <a href="{{ url_for('home_blueprint.profile') }}" class="pc-link">
             <span class="pc-micon">
               <i data-feather="user"></i>
