--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -62,6 +62,10 @@
               <div class="form-group mb-3">
                 {{ form.password(placeholder="Mot de passe", class="form-control", type="password") }}
               </div>
+              <div class="form-group mb-3">
+                {{ form.code(placeholder="Code d’invitation", class="form-control") }}
+              </div>
+              
 
               <div class="d-flex mt-1 justify-content-between">
                 <div class="form-check">
