--- a/templates/pages/bordereau.html
+++ b/templates/pages/bordereau.html
@@ -17,7 +17,7 @@
             <div class="col-md-12">
               <ul class="breadcrumb mb-0">
                 <li class="breadcrumb-item"><a href="{{ url_for('home_blueprint.index') }}">Home</a></li>
-                <li class="breadcrumb-item"><a href="javascript: void(0)">Other</a></li>
+                <li class="breadcrumb-item"><a href="javascript: void(0)">Bordereau</a></li>
                 <li class="breadcrumb-item" aria-current="page">Bordereau</li>
               </ul>
             </div>
@@ -58,16 +58,9 @@
       </div>
     </div>
   </div>
-</div>
-
-            
+</div>        
               <form method="POST">
-                {{ form.hidden_tag() }}
-                
-                <div class="mb-4">
-                  <h4 class="text-center fw-bold">BORDEREAU</h4>
-                </div>
-              
+                {{ form.hidden_tag() }}  
                 <div class="row">
                   <div class="col-md-6">
                     <label><strong>Nom de l’Entreprise</strong></label>
