--- a/templates/pages/liste_bordereaux.html
+++ b/templates/pages/liste_bordereaux.html
@@ -17,7 +17,7 @@
             <div class="col-md-12">
               <ul class="breadcrumb mb-0">
                 <li class="breadcrumb-item"><a href="{{ url_for('home_blueprint.index') }}">Home</a></li>
-                <li class="breadcrumb-item"><a href="javascript: void(0)">Other</a></li>
+                <li class="breadcrumb-item"><a href="javascript: void(0)">Historique bordereau</a></li>
                 <li class="breadcrumb-item" aria-current="page">Enregistrement Bordereau</li>
               </ul>
             </div>
