--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -21,7 +21,7 @@
                 <div class="col-md-12">
                 <ul class="breadcrumb mb-0">
                     <li class="breadcrumb-item"><a href="{{ url_for('home_blueprint.index') }}">Home</a></li>
-                    <li class="breadcrumb-item"><a href="javascript: void(0)">Basic UI</a></li>
+                    <li class="breadcrumb-item"><a href="javascript: void(0)">Profile</a></li>
                     <li class="breadcrumb-item" aria-current="page">Profile</li>
                 </ul>
                 {% with messages = get_flashed_messages(with_categories=true) %}
