--- a/templates/pages/enregistrement.html
+++ b/templates/pages/enregistrement.html
@@ -84,17 +84,17 @@
   
                 <div class="form-group">
                   {{ form.code_client.label(class="form-label") }}
-                  {{ form.code_client(class="form-control") }}
+                  {{ form.code_client(placeholder="CUST-001",class="form-control") }}
                 </div>
   
                 <div class="form-group">
                   {{ form.code_fournisseur.label(class="form-label") }}
-                  {{ form.code_fournisseur(class="form-control") }}
+                  {{ form.code_fournisseur(placeholder="FRS-001",class="form-control") }}
                 </div>
   
                 <div class="form-group">
                   {{ form.numero_piece.label(class="form-label") }}
-                  {{ form.numero_piece(class="form-control") }}
+                  {{ form.numero_piece(placeholder="PIECE-001",class="form-control") }}
                 </div>
   
                 <div class="form-group">
@@ -134,7 +134,7 @@
   
                 <div class="form-group">
                   {{ form.categorie.label(class="form-label") }}
-                  {{ form.categorie(class="form-control") }}
+                  {{ form.categorie(class="form-control select2") }}
                 </div>
   
                 <div class="form-group text-center mt-4">
