--- a/templates/pages/bordereau.html
+++ b/templates/pages/bordereau.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+
   <!-- [ Main Content ] start -->
   <div class="pc-container">
     <div class="pc-content">
@@ -54,12 +55,12 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fermer"></button>
       </div>
       <div class="modal-body" style="height: 80vh;">
-        <iframe id="pdfFrame" style="width:100%; height:100%; border:none;"></iframe>
+        <iframe id="pdfFrame" style="width:100%; height:100%; border:none;" scrolling="auto"></iframe>
       </div>
     </div>
   </div>
 </div>        
-              <form method="POST">
+              <form method="POST" id="form-bordereau">
                 {{ form.hidden_tag() }}  
                 <div class="row">
                   <div class="col-md-6">
@@ -373,17 +374,18 @@
     voirBtn.addEventListener("click", function (e) {
       e.preventDefault();
   
-      const form = document.querySelector("form");
+      const form = document.getElementById("form-bordereau");
   
       // 🔹 Réactiver temporairement les champs désactivés pour qu'ils soient inclus dans FormData
-      const disabledFields = form.querySelectorAll('[disabled]');
+      const disabledFields = form.querySelectorAll('input:disabled, textarea:disabled, select:disabled');
       disabledFields.forEach(field => field.removeAttribute('disabled'));
+      console.log(form)
   
       // 🔹 Créer le FormData à partir du formulaire complet
       const formData = new FormData(form);
   
       // 🔹 Renvoyer les champs à l’état désactivé après collecte
-      disabledFields.forEach(field => field.setAttribute('disabled', 'disabled'));
+      disabledFields.forEach(field => field.setAttribute('disabled', true));
   
       // 🔎 Debug : Affiche les données envoyées
       console.log("📤 Données envoyées :");
